--- a/index.html
+++ b/index.html
@@ -22,81 +22,64 @@
 
         <!-- Information section left side -->
         <section class="col-md-6 col-sm-12" id="wrap-one">
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <img src="img/logo.card.png" class="img-responsive" alt="Logo">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 col-sm-12 row-text">
+            <img src="img/logo.card.png" class="img-responsive" alt="Logo">            
+                    <div class="row-text">
                     <h1>Zadzwoń już teraz</h1>
                     <p>+48 695 278 518</p>
                     <p>+48 695 270 472</p>
                     <h1>English? Call us</h1>
                     <p>+48 695 278 518</p>
                 </div>
-            </div>
-        </section>
+          </section>
 
         <!-- Information section right side -->
-        <section class="col-md-6 col-sm-12 text-center" id="wrap-two">
-            <div class="row">
-                <div class="col-md-12 col-sm-12 text-left">
-                    <h1>Umów się na spotkanie</h1>
-                </div>
-            </div>
-
-            <!-- Contact form -->
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <form class="form-horizontal" method="post">
-                        <fieldset>
-
+<section class="col-md-6 col-sm-12 text-left" id="wrap-two">
+            <h1>Umów się na spotkanie</h1>
+                           
+                            <!-- Contact form -->
+    <form class="form-horizontal" method="post">
+            <fieldset>
                             <!-- Input - name -->
-                            <div class="form-group">
-                                <div class="col-md-8 col-sm-12">
-                                    <input id="name" type="text" placeholder="Imię" class="form-control">
-                                </div>
-                            </div>
+                <div class="form-group">
+                    <div class="col-md-8 col-sm-12">
+                        <input id="name" type="text" placeholder="Imię" class="form-control">
+                    </div>
+                </div>
 
                             <!-- Input - surname -->
-                            <div class="form-group">
-                                <div class="col-md-8 col-sm-12">
-                                    <input id="surname" type="text" placeholder="Nazwisko" class="form-control">
-                                </div>
-                            </div>
+                <div class="form-group">
+                    <div class="col-md-8 col-sm-12">
+                        <input id="surname" type="text" placeholder="Nazwisko" class="form-control">
+                    </div>
+                </div>
 
                             <!--Input - phone -->
-                            <div class="form-group">
-                                <div class="col-md-8 col-sm-12">
-                                    <input id="phone" type="text" placeholder="Telefon" class="form-control">
-                                </div>
-                            </div>
+                <div class="form-group">
+                    <div class="col-md-8 col-sm-12">
+                        <input id="phone" type="text" placeholder="Telefon" class="form-control">
+                    </div>
+                </div>
 
                             <!--Input - email -->
-                            <div class="form-group">
-                                <div class="col-md-8 col-sm-12">
-                                    <input id="email" type="text" placeholder="Email" class="form-control">
-                                </div>
-                            </div>
+                <div class="form-group">
+                    <div class="col-md-8 col-sm-12">
+                        <input id="email" type="text" placeholder="Email" class="form-control">
+                    </div>
+                </div>
 
                             <!--Input type checkbox -->
-                            <div class="checkbox text-left">
-                                <input type="checkbox" value="">
-                                <p>Wyrażam zgodę na przetwarzanie moich danych osobowych.
-                                    <br>Zapoznaj się z regulaminem.</p>
-                            </div>
-                            <!--Form actions -->
-                            <div class="form-group">
-                                <div class="col-md-12 col-sm-12">
-                                    <button type="submit" class="btn">Wyślij</button>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
+                <div class="checkbox text-left">
+                    <input type="checkbox" value="">
+                    <p>Wyrażam zgodę na przetwarzanie moich danych osobowych.
+                        <br>Zapoznaj się z regulaminem.</p>
                 </div>
-            </div>
-        </section>
+                            <!--Form actions -->
+                <div class="form-group">
+                    <button type="submit" class="btn">Wyślij</button>        
+                </div>
+            </fieldset>
+        </form>
+   </section>
     </div>
 </div>
 
